--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -17,6 +17,8 @@
 @using ProServ.Shared.Models.UserInfo;
 @using ProServ.Shared.Models.Coaches;
 @using ProServ.Client.Controllers;
+@using System.Text.Json;
+@using ProServ.Shared.Models.Workouts;
 
 
 @using Microsoft.AspNetCore.Authorization;
