--- a/Client/wwwroot/css/output.css
+++ b/Client/wwwroot/css/output.css
@@ -804,14 +804,6 @@ input[data-autocompleted] {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -869,10 +861,6 @@ input[data-autocompleted] {
   height: 4rem;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -885,12 +873,8 @@ input[data-autocompleted] {
   height: 100%;
 }
 
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-40 {
-  width: 10rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-6 {
@@ -937,6 +921,10 @@ input[data-autocompleted] {
   flex-direction: column;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .items-center {
   align-items: center;
 }
@@ -955,10 +943,6 @@ input[data-autocompleted] {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .border-t {
@@ -985,9 +969,9 @@ input[data-autocompleted] {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-indigo-500 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .fill-current {
@@ -1078,14 +1062,6 @@ input[data-autocompleted] {
   font-weight: 600;
 }
 
-.uppercase {
-  text-transform: uppercase;
-}
-
-.lowercase {
-  text-transform: lowercase;
-}
-
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -1113,4 +1089,9 @@ input[data-autocompleted] {
 .hover\:text-gray-300:hover {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:bg-slate-800) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
