--- a/Client/wwwroot/css/output.css
+++ b/Client/wwwroot/css/output.css
@@ -953,6 +953,10 @@ input[data-autocompleted] {
   overflow: hidden;
 }
 
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1091,6 +1095,11 @@ input[data-autocompleted] {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline {
