--- a/Client/wwwroot/css/general.css
+++ b/Client/wwwroot/css/general.css
@@ -1,11 +1,39 @@
 :root{
-    --border-base: #e5e9f0;
+    --border-base: rgb(119, 119, 119);
     --link: #007bff;
 
     font-family: Roboto, sans-serif;
    
    
 }
+
+.page-container{
+    margin: 0;
+    width: 100%;
+    background-color: pink;
+    
+}
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 
 .header-subtext{
     
@@ -35,8 +63,9 @@
     border-top: 1px solid --border-base;
     margin: 1em 0;
     padding: 0;
+    background-color: var(--border-base);
+    
 }
-
 .text-1{
     font-family: Roboto, sans-serif;
     font-size: calc(.795rem + .4vw);
