--- a/Client/wwwroot/css/Dashboard.css
+++ b/Client/wwwroot/css/Dashboard.css
@@ -1,18 +1,50 @@
-﻿.loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+﻿.dashboard-container{
+    max-width: 1650px;
+    width: 100%;
+    background-color: red;
 }
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
+
+.calendar-container{
+   min-width: 700px;
+   max-width: 950px;
+   width: 50vw;
+}
+
+.athlete-container{
+    min-width: 400px;
+    max-width: 600px;
+    width: 50vw;
+}
+
+
+.dashboard-responsive-stack {
+    flex-direction: row !important;
+    display: flex !important;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: start;
+    gap: 20px;
+}
+
+@media(max-width: 1400px){
+    .dashboard-container{
+        max-width: 1200px;
+    }
+    .calendar-container{
+        width: 100%;
+        min-width: 750px;
+    }
+    .athlete-container{
+        min-width: 450px;
+        max-width: 700px;
     }
 
-    100% {
-        transform: rotate(360deg);
+    .dashboard-responsive-stack {
+        flex-direction: column !important;
+        width: 100%;
+        align-items: center;
+        gap: 20px;
     }
 }
