Update Workout Center

--- a/Client/wwwroot/css/output.css
+++ b/Client/wwwroot/css/output.css
@@ -845,6 +845,10 @@ input[data-autocompleted] {
   margin-top: auto;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -992,12 +996,12 @@ input[data-autocompleted] {
   stroke: currentColor;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
